infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  # Selector job is take a look at all the pods created with label app: comments to manage
  selector:
    matchLabels:
      app: comments
  # template tell the deployment that the pod need to create
  template:
    metadata:
      labels:
        app: comments
    spec:
      containers:
        - name: comments
          image: dex1/comments:latest

# Three dash (---) is the way to create multiple object in a single yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  # if we don't provide k8s will have the default of (type: ClusterIP)
  type: ClusterIP
  selector:
    app: comments
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001
