infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  # Selector job is take a look at all the pods created with label app: event-bus to manage
  selector:
    matchLabels:
      app: event-bus
  # template tell the deployment that the pod need to create
  template:
    metadata:
      labels:
        app: event-bus
    spec:
      containers:
        - name: event-bus
          image: dex1/event-bus:latest

# Three dash (---) is the way to create multiple object in a single yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: event-bus-srv
spec:
  # if we don't provide k8s will have the default of (type: ClusterIP)
  type: ClusterIP
  selector:
    app: event-bus
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
