infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  # Selector job is take a look at all the pods created with label app: moderation to manage
  selector:
    matchLabels:
      app: moderation
  # template tell the deployment that the pod need to create
  template:
    metadata:
      labels:
        app: moderation
    spec:
      containers:
        - name: moderation
          image: dex1/moderation:latest

# Three dash (---) is the way to create multiple object in a single yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  # if we don't provide k8s will have the default of (type: ClusterIP)
  type: ClusterIP
  selector:
    app: moderation
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003
