infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  # Selector job is take a look at all the pods created with label app: posts to manage
  selector:
    matchLabels:
      app: posts
  # template tell the deployment that the pod need to create
  template:
    metadata:
      labels:
        app: posts
    spec:
      containers:
        - name: posts
          image: dex1/posts:latest

# Three dash (---) is the way to create multiple object in a single yaml file
---
apiVersion: v1
kind: Service
metadata:
  name: posts-clusterip-srv
spec:
  # if we don't provide k8s will have the default of (type: ClusterIP)
  type: ClusterIP
  selector:
    app: posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000
      targetPort: 4000
